<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signup"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mid_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintBottom_toTopOf="@+id/titleLogin"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/mid_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginBottom="25dp"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintBottom_toTopOf="@+id/mid_guideline" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toTopOf="@+id/mid_guideline" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_guideline" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#00000000"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circle"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="@+id/button_sign_in"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintTop_toTopOf="@+id/button_sign_in"
        tools:ignore="ContentDescription"/>

    <Button
        android:id="@+id/button_signup"
        android:onClick="SignIn"
        tools:ignore="UsingOnClickInXml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:text="@string/sign_in_underline"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline" />



</androidx.constraintlayout.widget.ConstraintLayout>